# ScoutOS

./: .env.example  .gitignore  PLAN.md  Proposal.txt  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 242119ee3849_webauthn_passkeys.py  738d064829d9_add_users_table.py  8bafe9e8cc58_add_player_image_url.py  92c70ddb0a3c_add_fbref_kaggle_source.py  c8e2e60fd6e7_add_player_youth_value_columns.py  dec8abb87c1c_initial_normalized_schema.py  e14967f8d44c_widen_position_foot_columns.py  f774a9b1290a_add_player_features_table.py
backend/app/: __init__.py  cache.py  config.py  main.py  middleware.py  schemas.py  security.py
backend/app/api/: analytics.py  auth.py  discover.py  explain.py  health.py  passkey.py  players.py  predict.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/llm/: __init__.py  client.py  context.py  prompts.py  service.py
backend/app/ml/: __init__.py  features.py  registry.py
backend/tests/: test_api.py  test_explain_llm.py  test_health.py  test_passkey.py
config/: club_fit_weights.json
data/: README.md
etl/: FBREF_REMOTE.md  README.md  __init__.py  backfill_league.py  config.py  merge_manifest.py  pyproject.toml  validate.py
etl/ingest/: __init__.py  __main__.py  _fbref_patch.py  base.py  clubelo.py  fbref.py  fbref_kaggle.py  statsbomb.py  transfermarkt.py  understat.py
etl/load/: __init__.py  __main__.py  checks.py  clubs.py  db.py  dimensions.py  enrich.py  facts.py  normalize.py  overrides.csv  players.py  profiles.py
etl/tests/: test_transforms.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.tsx  client.ts  hooks.ts  passkey.ts  types.ts
frontend/src/components/: DriverList.tsx  Layout.tsx  PitchPositions.tsx  SearchBar.tsx  StatRadar.tsx  ValueChart.tsx  ui.tsx
frontend/src/lib/: format.ts  useDebounced.ts  useReducedMotion.ts
frontend/src/pages/: CareerSimulator.tsx  ClubFinder.tsx  Home.tsx  Login.tsx  NotFound.tsx  PlayerLayout.tsx  (+3 more)
ml/: README.md  __init__.py  _paths.py  pyproject.toml
ml/features/: FEATURES.md  __init__.py  build.py  scaler.py
ml/models/: __init__.py  club_fit.py  dataset.py  explain.py  position.py  potential.py  similarity.py  value.py
ml/tests/: test_club_fit.py  test_explain.py  test_features.py  test_position.py  test_potential.py  test_similarity.py  test_value.py
