[project]
name = "scoutos-etl"
version = "0.1.0"
description = "Scout OS — data ingestion & ETL pipeline"
requires-python = ">=3.11"
dependencies = [
    "soccerdata==1.9.0",  # pinned: working parser; we widen the season stat-type gate (see _fbref_patch.py)
    "statsbombpy>=1.14",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "requests>=2.32",
    "tqdm>=4.66",
    "kagglehub>=0.3",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ingest"]
