[project]
name = "scoutos-ml"
version = "0.1.0"
description = "Scout OS — feature engineering & ML models"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "sqlalchemy>=2.0",
    "scoutos-backend",  # for app.db models/session (installed editable)
]

[project.optional-dependencies]
# Phase 4 model libraries, added when those models are built.
models = [
    "lightgbm>=4.0",
    "catboost>=1.2",
    "torch>=2.2",
    "faiss-cpu>=1.8",
    "shap>=0.44",
]
dev = ["pytest>=8.3", "ruff>=0.8"]

[tool.ruff]
line-length = 100
target-version = "py311"
